--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
 
     <TextView
         android:id="@+id/textView"
@@ -61,15 +63,19 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"/>
 
-    <Button
-        android:id="@+id/stopFlowButton"
-        android:layout_width="wrap_content"
+
+
+    <com.ch.ni.an.handlerthread.presenter.BottomButtonsView
+        android:id="@+id/bottomButtonsView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/stopFlow"
+        app:bottomProgressMode="false"
+        app:bottomPositiveButtonText="@string/start"
+        app:bottomNegativeButtonText="@string/stopFlow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="32dp"/>
+        android:layout_marginBottom="8dp"/>
 
 
 
