--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,19 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="materialButtonStyle">@style/MyButtonStyle</item>
+        <item name="bottomButtonsStyle">@style/DefaultButtonsStyle</item>
+    </style>
+
+    <style name="MyButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="DefaultButtonsStyle">
+        <item name="bottomPositiveBackgroundColor">#880000</item>
+    </style>
+
+    <style name="MyBottomButtonsStyle">
+        <item name="bottomPositiveBackgroundColor">#ff8800</item>
     </style>
 </resources>
