--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,8 @@
         <!-- Customize your theme here. -->
         <item name="materialButtonStyle">@style/MyButtonStyle</item>
         <item name="bottomButtonsStyle">@style/DefaultButtonsStyle</item>
+        
+        <item name="TicTacToeFieldStyle">@style/GlobalTicTacToeFieldStyle</item>
     </style>
 
     <style name="MyButtonStyle" parent="Widget.MaterialComponents.Button">
@@ -26,5 +28,16 @@
 
     <style name="MyBottomButtonsStyle">
         <item name="bottomPositiveBackgroundColor">#ff8800</item>
+    </style>
+    
+    
+    <style name="DefaultTicTacFieldStyle">
+        <item name="playerOneColor">#008800</item>
+        <item name="playerTwoColor">#880000</item>
+        <item name="greedColor">#dfdfdf</item>
+    </style>
+
+    <style name="GlobalTicTacToeFieldStyle" parent="DefaultTicTacFieldStyle">
+        <item name="playerOneColor">#0000ff</item>
     </style>
 </resources>
