--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".trash.MainActivity">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -62,7 +62,7 @@
 
 
 
-    <com.ch.ni.an.handlerthread.presenter.BottomButtonsView
+    <com.ch.ni.an.handlerthread.trash.presenter.BottomButtonsView
         android:id="@+id/bottomButtonsView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
